fixing similarity issues

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,11 @@
             <version>1.0.3</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
